<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_name"
        android:inputType="text"
        android:textSize="@dimen/login_form_font_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_password"
        android:inputType="textPassword"
        android:textSize="@dimen/login_form_font_size"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textSize="@dimen/login_form_font_size"
        />
    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_address"
        android:textSize="@dimen/login_form_font_size"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/hint_zip_code" />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_postal_addr"/>
   </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_form_font_size"
        android:layout_margin="@dimen/click_me_font_size"
        android:text="@string/btn_click_me"
        android:id="@+id/clickMe"
        />

    <!-- android:onClick="clickMe" -->
</LinearLayout>