<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/register_form_padding"
        android:background="@drawable/registeration_form_custom"
        >
        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
            android:layout_marginLeft="@dimen/userid_edittext_marginStart"
            android:layout_marginRight="@dimen/userid_edittext_marginEnd"
            android:layout_marginStart="@dimen/userid_edittext_marginStart"
            android:hint="@string/hint_enter_name"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/btn_register_form_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
            android:layout_marginLeft="@dimen/userid_edittext_marginStart"
            android:layout_marginRight="@dimen/userid_edittext_marginEnd"
            android:layout_marginStart="@dimen/userid_edittext_marginStart"
            >
            <EditText
                android:id="@+id/pwd_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_name"
                android:inputType="textPassword"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/pwd_confirm_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/btn_register_form_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
            android:layout_marginLeft="@dimen/userid_edittext_marginStart"
            android:layout_marginRight="@dimen/userid_edittext_marginEnd"
            android:layout_marginStart="@dimen/userid_edittext_marginStart"
            >
            <EditText
                android:id="@+id/zipcode_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_zip_code"
                android:inputType="number"
                android:maxLength="@integer/zipcode_number_limit"
                android:layout_weight="0.2"
                />
            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_address"
                android:inputType="text"
                android:layout_weight="1.8"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_register_form_margin"
            android:text="@string/btn_register"
            android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
            android:layout_marginLeft="@dimen/userid_edittext_marginStart"
            android:layout_marginRight="@dimen/userid_edittext_marginEnd"
            android:layout_marginStart="@dimen/userid_edittext_marginStart"
            />
    </LinearLayout>

</LinearLayout>